categories and products added

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,7 +1,7 @@
     <div class="flex justify-end py-10 me-40">
-        <button mat-raised-button color="primary" class="float-right" (click)="addProduct()">
-            Add new product
-          </button>
+      <button mat-raised-button color="primary" class="float-right" (click)="openAddProductDialog()">
+        Add new product
+    </button>
       </div>
       <div class="mx-auto w-3/4">
   <table mat-table [dataSource]="dataSource" class="w-full mat-elevation-z8">
