--- a/src/app/components/add-product/add-product.component.html
+++ b/src/app/components/add-product/add-product.component.html
@@ -1,7 +1,8 @@
-<mat-card class="max-w-7xl mx-auto">
+  <div class="p-6">
   <h2>Add new product</h2>
-  <form [formGroup]="productForm" (ngSubmit)="addProduct()">
-    <mat-form-field class="w-full">
+</div>
+  <form [formGroup]="productForm" (ngSubmit)="addProduct()" class="p-6">
+    <mat-form-field class="w-full" >
       <mat-label>Title</mat-label>
       <input matInput type="text" formControlName="title">
     </mat-form-field>
@@ -11,16 +12,20 @@
     </mat-form-field>
     <mat-form-field class="w-full">
       <mat-label>Category</mat-label>
-      <input matInput type="text" formControlName="category">
+      <!-- Change the input to a mat-select and bind the options to your categories -->
+      <mat-select matInput formControlName="category">
+        <mat-option *ngFor="let category of categories" [value]="category.category">
+          {{ category.category}}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
     <mat-form-field class="w-full">
       <mat-label>Description</mat-label>
       <input matInput type="text" formControlName="description">
     </mat-form-field>
     <div class="file-upload mb-5">
-      <input type="file" id="file" (change)="onFileSelected($event)" style="display: none;">
-      <label for="file" mat-raised-button color="primary">Upload Image</label>
-    </div>    
+      <input type="file" id="file" class="file-input"  (change)="onFileSelected($event)">
+    </div>
     <button mat-raised-button color="primary" type="submit">Add Product</button>
   </form>
-</mat-card>
+
