--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
-<mat-drawer-container
+<!-- <mat-drawer-container
   [autosize]="true"
-  class="min-h-full max-w-7xl mx-auto border-x"
+  class="min-h-full max-w-7xl mx-auto border-x px-20 py-20"
 >
-  <mat-card class="flex justify-between px-8 py-20" >
+ 
     <div class="flex justify-end py-10">
       <button
         mat-raised-button
@@ -14,7 +14,7 @@
     </div>
     <div>
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <!-- Column definitions -->
+       
         <ng-container matColumnDef="CATEGORIES">
           <th mat-header-cell *matHeaderCellDef>CATEGORIES</th>
           <td mat-cell *matCellDef="let element">{{ element.CATEGORIES }}</td>
@@ -31,10 +31,10 @@
           </td>
         </ng-container>
 
-        <!-- Header and row declarations -->
+      
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
     </div>
-  </mat-card>
-</mat-drawer-container>
+ 
+</mat-drawer-container> -->
