--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -36,9 +36,19 @@
       Action
       </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="warn" >
-          <mat-icon>close</mat-icon>
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
         </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="editProduct(element)">
+            <mat-icon>edit</mat-icon>
+            <span>Edit</span>
+          </button>
+          <button mat-menu-item (click)="openConfirmDialog(element)">
+            <mat-icon>close</mat-icon>
+            <span>Remove</span>
+          </button>
+        </mat-menu>
       </td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
