--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,7 +21,7 @@
       <a mat-list-item routerLink="/customers" routerLinkActive="active" class="my-2">
         <mat-icon class="mr-2">people</mat-icon> <span class="sidenav-text">Customers</span>
       </a>
-      <a mat-list-item routerLink="/customers" routerLinkActive="active" class="my-2">
+      <a mat-list-item routerLink="/order" routerLinkActive="active" class="my-2">
         <mat-icon class="mr-2">assignment</mat-icon> <span class="sidenav-text">Orders</span>
       </a>
     </mat-nav-list>
