--- a/src/app/components/add-category-dialog/add-category-dialog.component.html
+++ b/src/app/components/add-category-dialog/add-category-dialog.component.html
@@ -6,7 +6,7 @@
     <form [formGroup]="categoryForm">
       <mat-form-field class="w-full mb-4 mt-4">
         <mat-label>Category Name</mat-label>
-        <input matInput formControlName="category">
+        <input matInput formControlName="Name">
       </mat-form-field>
     </form>
   </mat-dialog-content>
