--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -12,7 +12,7 @@
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <ng-container matColumnDef="CATEGORIES">
           <th mat-header-cell *matHeaderCellDef>CATEGORIES</th>
-          <td mat-cell *matCellDef="let element">{{ element.category}}</td>
+          <td mat-cell *matCellDef="let element">{{ element.name}}</td>
         </ng-container>
         <ng-container matColumnDef="QuantityProduct">
           <th mat-header-cell *matHeaderCellDef>QuantityProduct</th>
