--- a/src/app/components/edit-category-dialog/edit-category-dialog.component.html
+++ b/src/app/components/edit-category-dialog/edit-category-dialog.component.html
@@ -5,7 +5,7 @@
   <mat-dialog-content class="pt-6 mat-typography flex-grow">
     <form [formGroup]="form">
       <mat-form-field class="w-full mb-4 mt-4">
-        <input matInput formControlName="category">
+        <input matInput formControlName="Name">
       </mat-form-field>
     </form>
   </mat-dialog-content>
