--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,9 +1,9 @@
-    <div class="flex justify-end py-10 me-40">
+  <div class="flex justify-end py-10 me-40">
       <button mat-raised-button color="primary" class="float-right" (click)="openAddProductDialog()">
         Add new product
     </button>
       </div>
-      <div class="mx-auto w-3/4">
+<div class="mx-auto w-3/4">
   <table mat-table [dataSource]="dataSource" class="w-full mat-elevation-z8">
     <ng-container matColumnDef="product">
       <th mat-header-cell *matHeaderCellDef>Product</th>
@@ -22,7 +22,7 @@
     <ng-container matColumnDef="category">
       <th mat-header-cell *matHeaderCellDef>Category</th>
       <td mat-cell *matCellDef="let element">
-        <span class="truncate max-w-xs block">{{ element.category }}</span>
+        <span class="truncate max-w-xs block">{{ element.categoryName}}</span>
       </td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
