--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,15 @@
-<mat-toolbar class="mx-auto bg-blue-500 text-white">
+<mat-toolbar class="mx-auto bg-blue-500 text-white" *ngIf="isLoggedIn">
   <mat-toolbar-row class="justify-between px-5">
     <button mat-icon-button (click)="toggleSidenav()">
       <mat-icon>menu</mat-icon>
     </button>
     <a routerLink="/home" class="text-xl">Admin</a>
-    <button mat-button>
+    <button mat-button (click)="onLogout()">
       <mat-icon>logout</mat-icon> Logout
     </button>
   </mat-toolbar-row>
 </mat-toolbar>
-<mat-sidenav-container class="example-container h-full">
+<mat-sidenav-container class="example-container h-full" *ngIf="isLoggedIn">
   <mat-sidenav #sidenav class="w-64 bg-blue-500 text-white" [ngClass]="{'sidenav-collapsed': isSidenavCollapsed}" mode="side" opened>
     <mat-nav-list>
       <a mat-list-item routerLink="/categories" routerLinkActive="active" class="my-2">
