--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -4,45 +4,41 @@
 <div class="mat-elevation-z8 mx-auto w-3/4">
     <table mat-table [dataSource]="dataSource">
   
-      <!-- Order Id Column -->
+     
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Order ID</th>
-        <td mat-cell *matCellDef="let order">{{ order.id }}</td>
+        <td mat-cell *matCellDef="let order">{{ order.orderId }}</td>
       </ng-container>
   
-      <!-- Customer Id Column -->
+      
       <ng-container matColumnDef="customerId">
-        <th mat-header-cell *matHeaderCellDef>Customer ID</th>
-        <td mat-cell *matCellDef="let order">{{ order.customerId }}</td>
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let order">{{ order.name }}</td>
       </ng-container>
   
-      <!-- Products Column -->
-      <ng-container matColumnDef="products">
-        <th mat-header-cell *matHeaderCellDef>Products</th>
-        <td mat-cell *matCellDef="let order">
-          <div *ngFor="let product of order.products">
-            {{ product.title }}
-          </div>
-        </td>
-      </ng-container>
-  
-      <!-- Date Ordered Column -->
+    
       <ng-container matColumnDef="dateOrdered">
         <th mat-header-cell *matHeaderCellDef>Date Ordered</th>
-        <td mat-cell *matCellDef="let order">{{ order.dateOrdered }}</td>
+        <td mat-cell *matCellDef="let order">{{ order.orderDate | date:'y-MM-dd' }}</td>
       </ng-container>
   
-      <!-- Status Column -->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let order">{{ order.status }}</td>
-      </ng-container>
-  
-      <!-- Total Column -->
+      
       <ng-container matColumnDef="total">
         <th mat-header-cell *matHeaderCellDef>Total</th>
-        <td mat-cell *matCellDef="let order">{{ order.total }}</td>
-      </ng-container>
+        <td mat-cell *matCellDef="let order">
+          {{ computeTotal(order.orderDetails) | currency:'EUR':'symbol':'1.2-2' }}
+
+        </td>
+    </ng-container>
+
+    <ng-container matColumnDef="moreDetails">
+      <th mat-header-cell *matHeaderCellDef>More Details</th>
+      <td mat-cell *matCellDef="let order">
+        <button mat-raised-button color="primary">View</button>
+      </td>
+  </ng-container>
+  
+    
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
