--- a/src/app/components/orders-components/order/order.component.html
+++ b/src/app/components/orders-components/order/order.component.html
@@ -7,7 +7,7 @@
      
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Order ID</th>
-        <td mat-cell *matCellDef="let order">{{ order.OrderNumber}}</td>
+        <td mat-cell *matCellDef="let order">{{ order.orderNumber}}</td>
       </ng-container>
   
       
