--- a/src/app/components/categries-components/add-category-dialog/add-category-dialog.component.html
+++ b/src/app/components/categries-components/add-category-dialog/add-category-dialog.component.html
@@ -5,7 +5,7 @@
   <mat-dialog-content class="pt-6 mat-typography flex-grow">
     <form [formGroup]="categoryForm">
       <mat-form-field class="w-full mb-4 mt-4">
-        <mat-label>Category Name</mat-label>
+        <!-- <mat-label class="mt-2">Category Name</mat-label> -->
         <input matInput formControlName="Name">
       </mat-form-field>
     </form>
