--- a/src/app/components/products-components/add-product/add-product.component.html
+++ b/src/app/components/products-components/add-product/add-product.component.html
@@ -24,8 +24,24 @@
       <input matInput type="text" formControlName="description">
     </mat-form-field>
     <div class="file-upload mb-5">
-      <input type="file" id="file" class="file-input"  (change)="onFileSelected($event)">
+      <input type="file" id="file" class="file-input" multiple (change)="onFilesSelected($event)">
+  </div>
+  
+<div class="flex items-end">
+    <!-- First Image: Represents Home Page -->
+    <div class="w-1/4 border rounded p-1 m-1" *ngIf="selectedFiles.length > 0">
+        <img [src]="selectedFiles[0] | safeUrl" alt="Home Page Image" class="w-full h-64 object-cover cursor-pointer" style="width: 160px; height: 160px;">
     </div>
-    <button mat-raised-button color="primary" type="submit">Add Product</button>
+
+    <!-- Side Images: Represents Product Details -->
+    <ng-container *ngFor="let img of selectedFiles.slice(1)">
+        <div class="w-1/4 border rounded p-1 m-1">
+            <img [src]="img | safeUrl" alt="Product Detail Image" class="w-full h-32 object-cover cursor-pointer" style="width: 80px; height: 80px;">
+        </div>
+    </ng-container>
+</div>
+    <button mat-raised-button color="primary" type="submit" class="mt-4">Add Product</button>
   </form>
 
+ 
+  
