--- a/src/app/components/products-components/products/products.component.html
+++ b/src/app/components/products-components/products/products.component.html
@@ -1,62 +1,61 @@
-  <div class="flex justify-end py-10 me-40">
-      <button mat-raised-button color="primary" class="float-right" (click)="openAddProductDialog()">
-        Add new product
-    </button>
- </div>
+<div class="flex justify-end py-10 me-40">
+  <button mat-raised-button color="primary" class="float-right" (click)="openAddProductDialog()">
+      Voeg nieuw product toe
+  </button>
+</div>
 <div class="mx-auto w-3/4">
   <mat-card class="max-w-7xl mx-auto">
-  <table mat-table [dataSource]="dataSource" class="w-full mat-elevation-z8">
-    <ng-container matColumnDef="product">
-      <th mat-header-cell *matHeaderCellDef>Product</th>
-      <td mat-cell *matCellDef="let element">
-        <img [src]="element.imageUrl" alt="product" class="w-[100px] my-5" />
-      </td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">
-        <span class="truncate max-w-xs block">{{ element.title }}</span>
-      </td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="category">
-      <th mat-header-cell *matHeaderCellDef>Category</th>
-      <td mat-cell *matCellDef="let element">
-        <span class="truncate max-w-xs block">{{ element.categoryName}}</span>
-      </td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef>Price</th>
-      <td mat-cell *matCellDef="let element">{{ element.price | currency }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef>
-      Action
-      </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-icon-button [matMenuTriggerFor]="menu">
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="editProduct(element)">
-            <mat-icon>edit</mat-icon>
-            <span>Edit</span>
-          </button>
-          <button mat-menu-item (click)="openConfirmDialog(element)">
-            <mat-icon>close</mat-icon>
-            <span>Remove</span>
-          </button>
-        </mat-menu>
-      </td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
-  </table>
-</mat-card>
+      <table mat-table [dataSource]="dataSource" class="w-full mat-elevation-z8">
+          <ng-container matColumnDef="product">
+              <th mat-header-cell *matHeaderCellDef>Product</th>
+              <td mat-cell *matCellDef="let element">
+                  <img [src]="element.imageUrls[0]" alt="product" class="w-[100px] my-5" />
+              </td>
+              <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef>Naam</th>
+              <td mat-cell *matCellDef="let element">
+                  <span class="truncate max-w-xs block">{{ element.title }}</span>
+              </td>
+              <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="category">
+              <th mat-header-cell *matHeaderCellDef>Categorie</th>
+              <td mat-cell *matCellDef="let element">
+                  <span class="truncate max-w-xs block">{{ element.categoryName }}</span>
+              </td>
+              <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="price">
+              <th mat-header-cell *matHeaderCellDef>Prijs</th>
+              <td mat-cell *matCellDef="let element">{{ element.price | currency:'EUR' }}</td>
+              <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef>
+              Actie
+              </th>
+              <td mat-cell *matCellDef="let element">
+                  <button mat-icon-button [matMenuTriggerFor]="menu">
+                      <mat-icon>more_vert</mat-icon>
+                  </button>
+                  <mat-menu #menu="matMenu">
+                      <button mat-menu-item (click)="editProduct(element)">
+                          <mat-icon>edit</mat-icon>
+                          <span>Bewerken</span>
+                      </button>
+                      <button mat-menu-item (click)="openConfirmDialog(element)">
+                          <mat-icon>close</mat-icon>
+                          <span>Verwijderen</span>
+                      </button>
+                  </mat-menu>
+              </td>
+              <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+      </table>
+  </mat-card>
 </div>
-
