--- a/src/app/components/products-components/products/products.component.html
+++ b/src/app/components/products-components/products/products.component.html
@@ -1,25 +1,29 @@
-<div class="flex justify-end py-10 me-40">
-  <button mat-raised-button color="primary" class="float-right" (click)="openAddProductDialog()">
-      Voeg nieuw product toe
-  </button>
+<div class="flex justify-between py-10 me-40">
+    <mat-checkbox class="ml-40" [(ngModel)]="showPopularOnly" (change)="getProducts()">Show Only Popular Products</mat-checkbox>
+    <button mat-raised-button color="primary" (click)="openAddProductDialog()">
+        Voeg nieuw product toe
+    </button>
 </div>
+
 <div class="mx-auto w-3/4">
   <mat-card class="max-w-7xl mx-auto">
       <table mat-table [dataSource]="dataSource" class="w-full mat-elevation-z8">
           <ng-container matColumnDef="product">
               <th mat-header-cell *matHeaderCellDef>Product</th>
               <td mat-cell *matCellDef="let element">
-                  <img [src]="element.imageUrls[0]" alt="product" class="w-[100px] my-5" />
+                  <img [src]="element.imageUrls[0].file" alt="product" class="w-[100px] my-5" />
               </td>
               <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
           <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef>Naam</th>
-              <td mat-cell *matCellDef="let element">
-                  <span class="truncate max-w-xs block">{{ element.title }}</span>
-              </td>
-              <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
+            <th mat-header-cell *matHeaderCellDef>Naam</th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon *ngIf="element.isPopular" class="text-yellow-500 mr-2">star</mat-icon>
+                <span class="truncate max-w-xs block">{{ element.title }}</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+        
           <ng-container matColumnDef="category">
               <th mat-header-cell *matHeaderCellDef>Categorie</th>
               <td mat-cell *matCellDef="let element">
